# sweettest-app-validation-reproduction

./: .gitignore  Cargo.toml  README.md  flake.nix  package.json  pnpm-lock.yaml
.github/workflows/: test.yaml
docs/: introduction.md  package.json  setup.md
docs/elements/: all-posts-entry-hash.md  all-posts.md  certificate-detail.md  certificate-summary.md  certificates-for-certificate.md  certificates-for-certified.md  certificates-for-post.md  comment-detail.md  comment-summary.md  comments-for-post.md  create-certificate.md  create-comment.md  create-like.md  create-post.md  edit-comment.md  edit-post.md  like-detail.md  like-summary.md  likes-for-like.md  post-detail.md  post-summary.md  posts-by-author-entry-hash.md  posts-by-author.md
tests/: package.json
tests/src/: all-posts-entry-hash.test.ts  all-posts.test.ts  certificate.test.ts  comment.test.ts  like.test.ts  post.test.ts  posts-by-author-entry-hash.test.ts  posts-by-author.test.ts  setup.ts
ui/: custom-elements.json  package.json
ui/demo/: index.html
ui/locales/: locales.js
ui/src/: context.ts  index.ts  mocks.ts  posts-client.ts  posts-store.ts  types.ts
workdir/: dna.nix  dna.yaml  happ.nix  happ.yaml
zomes/coordinator/posts/: Cargo.toml  zome.nix
zomes/coordinator/posts/src/: all_posts.rs  all_posts_entry_hash.rs  certificate.rs  comment.rs  lib.rs  like.rs  post.rs  posts_by_author.rs  posts_by_author_entry_hash.rs
zomes/coordinator/posts/tests/: all_posts.rs  all_posts_entry_hash.rs  certificate.rs  comment.rs  like.rs  post.rs  posts_by_author.rs  posts_by_author_entry_hash.rs
zomes/coordinator/posts/tests/common/: mod.rs
(+30 files in other folders)
