[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["zomes/coordinator/*", "zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
holochain = { version = "0.4.0-dev.1", default-features = false, features = [
  "test_utils",
] }
hdi = "0.5.0-dev"
hdk = "0.4.0-dev"
serde = "1"

