[package]
name = "posts"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "posts"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

posts_integrity = { path = "../../integrity/posts", package = "posts_integrity" }

[dev-dependencies]
fixt = "0.3.0-beta-dev"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true }
holochain_trace = { version = "0.3.0-beta-dev" }
tokio = { version = "1.3", features = ["full"] }

